# VSM-SNW-GUIA

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run-dev.sh  run_dev.sh  run_prod.sh  vite.config.js
commons/: forms.py  helpers.py  models.py  validators.py  views.py  wagtail_hooks.py  widgets.py
commons/migrations/: 0001_initial.py  0002_homepage.py  0003_externalredirect.py  0004_footermenucategories.py  0005_degree_subject.py  0005_delete_footermenucategories.py  0006_merge_20220721_2038.py  0007_alter_subject_options_and_more.py  0008_rename_degree_detailproductpage_grade_and_more.py  0009_santillanasettings_chatbot_and_more.py  0010_degree_number_serie.py  0011_homepage_hero_alter_basepage__content_base_and_more.py  0012_detailproductpage__thematic_content.py  0013_detailproductpage_image.py  0014_detailproductpage_idiom_and_more.py  0015_detailproductpage_author_and_more.py  0016_detailproductpage_audio_detailproductpage_posters_and_more.py  0017_alter_serie_options_serie_select_serie_editorial_and_more.py  0018_remove_serie_select_serie_editorial_serie_type.py  0019_coursedetailpage.py  0020_coursedetailpage_date_time_event_and_more.py  0021_alter_coursedetailpage_date_time_event.py  0021_thematichomepage.py  0022_merge_20220831_2349.py  0023_basepage_search_image_is_svg_and_more.py  0024_degree_color.py  (+29 more)
custom_user/: forms.py  models.py
forms/: models.py
menus/: models.py
private/: urls.py  views.py
search/: views.py
vsm_snw/: urls.py  wsgi.py
(+213 files in other folders)
