[tool.poetry]
name = "vsm-snw"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.0"
wagtail = "^3.0"
requests = "^2.28.0"
django-vite = "^2.0.2"
wagtail-transfer = "^0.8.4"
django-debug-toolbar = "^3.5.0"
django-sass-processor = "^1.2"
django-simple-robots = "^1.1.0"
django-storages = "^1.12.3"
wagtail-instance-selector = "^2.1.2"
psycopg2-binary = "^2.9.3"
psycopg = "^3.0.15"
wagtailmenus = {git = "https://github.com/jazzband/wagtailmenus.git", rev = "v3.1.2"}
Pillow = "9.1.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
